# RGibbs

./: CMakeLists.txt  README.md
src/: RGibbsReactor.cpp  RGibbsReactor.h
tests/: test_reactor.cpp
